aplico variables basicas sass al sitio en gral

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,13 +1,14 @@
 footer {
     height: 70px;
     width: 100%;
-    background-color: black;
+    background-color: $bg-principal;
     display: flex;
     justify-content: space-between;
-    h5 {
+
+    h5{
         padding: 5px 2px;
         margin-left: 5px;
-        color: #FFFFFF;
+        color: $color;
         font-size: 13px;
         font-weight: bolder;
         text-align: center;
@@ -15,41 +16,22 @@ footer {
     }
 }
 
-/*footer h5 {
-    padding: 5px 2px;
-    margin-left: 5px;
-    color: #FFFFFF;
-    font-size: 13px;
-    font-weight: bolder;
-    text-align: center;
-    align-items: center;
-}*/
-
 .redesSociales {
     display: block;
     text-align: center;
     line-height: 70px;
+
     a {
         font-size: 20px;
-        color: white;
+        color: $color;
         padding: 3px;
+
         &:hover {
-            text-shadow: 5px 5px 10px white,
-                -5px -5px 10px white;
+            text-shadow: 5px 5px 10px $color,
+                -5px -5px 10px $color;
         }
     }
 }
-
-/*.redesSociales a {
-    font-size: 20px;
-    color: white;
-    padding: 3px;
-}*/
-
-/*.redesSociales a:hover {
-    text-shadow: 5px 5px 10px white,
-        -5px -5px 10px white;
-}*/
 
 .conocenos {
     width: 20%;
@@ -58,12 +40,13 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
     font-size: 10px;
-    color: white !important;
+    color: $color !important;
     font-weight: bold;
     text-decoration: none;
     letter-spacing: 1px;
     margin-top: 10px;
 }
+
 @media only screen and (min-width: 480px) {
     footer h5 {
         font-size: 16px;
@@ -77,6 +60,7 @@ footer {
         font-size: 15px;
     }
 }
+
 @media only screen and (min-width: 700px) {
     .redesSociales a {
         font-size: 30px;
