--- a/sass/_cafe.scss
+++ b/sass/_cafe.scss
@@ -19,7 +19,7 @@
         background-position: center;
         background-repeat: no-repeat;
         font-size: 38px;
-        color: white;
+        color: $color;
         text-align: center;
         line-height: 150px;
         font-weight: bolder;
@@ -32,7 +32,7 @@
     }
     .cafe-bike {
         grid-area: cafe-bike;
-        color: #FFFFFF;
+        color: $color;
     }
     .delicatessen {
         grid-area: delicatessen;
