--- a/sass/_seccionesTienda.scss
+++ b/sass/_seccionesTienda.scss
@@ -1,12 +1,12 @@
 .sectionProductos {
-    background-color: black;
+    background-color: $bg-principal;
     display: flex;
     flex-direction: column;
 
     .tituloProductos {
         display: block;
         font-size: 40px;
-        color: #FFFFFF;
+        color: $color;
         font-weight: bolder;
         margin-left: 10px;
         margin-top: 10px;
@@ -50,15 +50,15 @@
                 font-size: 20px;
                 margin-bottom: 15px;
                 font-weight: bolder;
-                color: #FFFFFF;
+                color: $color;
             }
 
             a {
                 width: 100%;
                 text-decoration: none;
-                color: #FFFFFF;
+                color: $color;
                 font-weight: bolder;
-                background-color: black;
+                background-color: $bg-principal;
                 font-size: 25px;
                 padding: 2px 5px;
                 text-decoration: none;
@@ -66,18 +66,18 @@
                 margin: 0px;
 
                 &:hover {
-                    text-shadow: 0 0 9px #fff;
+                    text-shadow: 0 0 9px $color;
                 }
             }
 
             .ropa {
                 object-fit: contain;
-                background-color: white;
+                background-color: $color;
             }
         }
 
         .volverTienda {
-            color: #FFFFFF;
+            color: $color;
             text-decoration: none;
             font-weight: bolder;
             width: 54px;
@@ -93,7 +93,7 @@
             margin-right: 2px;
 
             &:hover {
-                box-shadow: 0 0 15px rgb(255, 254, 254);
+                box-shadow: 0 0 15px $color;
             }
         }
     }
