--- a/sass/_taller.scss
+++ b/sass/_taller.scss
@@ -1,5 +1,5 @@
 .sectionTaller {
-    background-color: black;
+    background-color: $bg-principal;
     display: flex;
     flex-direction: column;
     --bs-gutter-x: opx;
@@ -16,7 +16,7 @@
             font-size: 35px;
             text-align: center;
             align-self: center;
-            color: #D6D6D6;
+            color: $color;
             margin: 3px;
             padding: 5px;
 
