--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -1,5 +1,5 @@
 .mainTienda {
-    background-color: black;
+    background-color: $bg-principal;
 
     h1 {
         font-size: 40px;
@@ -17,11 +17,11 @@
             line-height: 100px;
             font-size: 30px;
             font-weight: bolder;
-            color: #FFFFFF;
+            color: $color;
 
             a {
                 text-decoration: none;
-                color: #FFFFFF;
+                color: $color;
                 font-weight: bolder;
 
                 &:hover {
