--- a/styleOk.css
+++ b/styleOk.css
@@ -38,7 +38,7 @@ nav div.container-fluid a.navbar-brand img {
   text-decoration: none;
   font-size: 30px;
   font-weight: bolder;
-  color: #FFFFFF !important;
+  color: #ffffff !important;
   font-size: auto;
   letter-spacing: 2px;
 }
@@ -78,7 +78,7 @@ nav div.container-fluid a.navbar-brand img {
 }
 .index div a {
   text-decoration: none;
-  color: white;
+  color: #ffffff;
   font-size: 40px;
   font-weight: bold;
 }
@@ -140,22 +140,13 @@ footer {
 footer h5 {
   padding: 5px 2px;
   margin-left: 5px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 13px;
   font-weight: bolder;
   text-align: center;
   align-items: center;
 }
 
-/*footer h5 {
-    padding: 5px 2px;
-    margin-left: 5px;
-    color: #FFFFFF;
-    font-size: 13px;
-    font-weight: bolder;
-    text-align: center;
-    align-items: center;
-}*/
 .redesSociales {
   display: block;
   text-align: center;
@@ -163,22 +154,13 @@ footer h5 {
 }
 .redesSociales a {
   font-size: 20px;
-  color: white;
+  color: #ffffff;
   padding: 3px;
 }
 .redesSociales a:hover {
-  text-shadow: 5px 5px 10px white, -5px -5px 10px white;
+  text-shadow: 5px 5px 10px #ffffff, -5px -5px 10px #ffffff;
 }
 
-/*.redesSociales a {
-    font-size: 20px;
-    color: white;
-    padding: 3px;
-}*/
-/*.redesSociales a:hover {
-    text-shadow: 5px 5px 10px white,
-        -5px -5px 10px white;
-}*/
 .conocenos {
   width: 20%;
   background-image: url(./imagenes/logoreal2.png);
@@ -186,7 +168,7 @@ footer h5 {
   background-repeat: no-repeat;
   background-position: center;
   font-size: 10px;
-  color: white !important;
+  color: #ffffff !important;
   font-weight: bold;
   text-decoration: none;
   letter-spacing: 1px;
@@ -230,11 +212,11 @@ footer h5 {
   line-height: 100px;
   font-size: 30px;
   font-weight: bolder;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .mainTienda .row .tienda a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bolder;
 }
 .mainTienda .row .tienda a:hover {
@@ -261,7 +243,7 @@ footer h5 {
 .sectionProductos .tituloProductos {
   display: block;
   font-size: 40px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bolder;
   margin-left: 10px;
   margin-top: 10px;
@@ -302,12 +284,12 @@ footer h5 {
   font-size: 20px;
   margin-bottom: 15px;
   font-weight: bolder;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .sectionProductos .productos .card a {
   width: 100%;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bolder;
   background-color: black;
   font-size: 25px;
@@ -317,14 +299,14 @@ footer h5 {
   margin: 0px;
 }
 .sectionProductos .productos .card a:hover {
-  text-shadow: 0 0 9px #fff;
+  text-shadow: 0 0 9px #ffffff;
 }
 .sectionProductos .productos .card .ropa {
   object-fit: contain;
-  background-color: white;
+  background-color: #ffffff;
 }
 .sectionProductos .productos .volverTienda {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   font-weight: bolder;
   width: 54px;
@@ -340,7 +322,7 @@ footer h5 {
   margin-right: 2px;
 }
 .sectionProductos .productos .volverTienda:hover {
-  box-shadow: 0 0 15px rgb(255, 254, 254);
+  box-shadow: 0 0 15px #ffffff;
 }
 
 .sectionCafeOk {
@@ -358,7 +340,7 @@ footer h5 {
   background-position: center;
   background-repeat: no-repeat;
   font-size: 38px;
-  color: white;
+  color: #ffffff;
   text-align: center;
   line-height: 150px;
   font-weight: bolder;
@@ -371,7 +353,7 @@ footer h5 {
 }
 .sectionCafeOk .cafe-bike {
   grid-area: cafe-bike;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 .sectionCafeOk .delicatessen {
   grid-area: delicatessen;
@@ -443,7 +425,7 @@ footer h5 {
   font-size: 35px;
   text-align: center;
   align-self: center;
-  color: #D6D6D6;
+  color: #ffffff;
   margin: 3px;
   padding: 5px;
 }
@@ -513,39 +495,40 @@ footer h5 {
   text-decoration: none;
   font-size: 20px;
   background-color: black;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bolder;
   padding: 5px;
   border-radius: 25px;
 }
 .sectionrodadas .rodadasGasparini a:hover {
-  text-shadow: 0 0 10px #fff;
+  text-shadow: 0 0 10px #ffffff;
 }
-.sectionrodadas .rodadasGasparini .rodadasRedes {
+.sectionrodadas .rodadasRedes {
   display: flex;
   justify-content: center;
 }
-.sectionrodadas .rodadasGasparini .rodadasRedes a {
+.sectionrodadas .rodadasRedes a {
   margin: 5px 10px;
   background: none;
   font-size: 30px;
-  color: azure;
+  color: #ffffff;
 }
-.sectionrodadas .rodadasGasparini .rodadasRedes a i:hover {
-  text-shadow: 0 0 10px #fff;
+.sectionrodadas .rodadasRedes a i:hover {
+  text-shadow: 0 0 10px #ffffff;
 }
-.sectionrodadas .rodadasGasparini .botonMasInfo a {
+.sectionrodadas .botonMasInfo a {
   margin: 0px;
 }
-.sectionrodadas .rodadasmitad2 {
+
+.rodadasmitad2 {
   text-align: center;
 }
-.sectionrodadas .rodadasmitad2 iframe {
+.rodadasmitad2 iframe {
   width: 90%;
   margin: 0px;
   border: 2px solid black;
 }
-.sectionrodadas .rodadasmitad2 h1 {
+.rodadasmitad2 h1 {
   font-size: 35px;
   width: 30%;
   margin-top: 30px;
@@ -554,31 +537,31 @@ footer h5 {
   border: 2px solid black;
   font-weight: bolder;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas {
+.rodadasmitad2 .proximasSalidas {
   background-color: rgba(15, 15, 15, 0.411);
   height: auto;
   margin: 0px 20px 0px 20px;
   padding-bottom: 10px;
   border: 2px solid black;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas h2 {
+.rodadasmitad2 .proximasSalidas h2 {
   font-size: 35px;
   background-color: rgba(255, 255, 255, 0.443);
-  color: #fff;
+  color: #ffffff;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas h3 {
+.rodadasmitad2 .proximasSalidas h3 {
   font-size: 30px;
   background-color: rgba(255, 255, 255, 0.0901960784);
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas p {
+.rodadasmitad2 .proximasSalidas p {
   font-size: 25px;
   margin-bottom: 10px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas a {
+.rodadasmitad2 .proximasSalidas a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: rgb(78, 77, 77);
   padding: 5px;
   font-weight: bolder;
@@ -588,7 +571,7 @@ footer h5 {
   border-radius: 20px;
   padding: 5px;
 }
-.sectionrodadas .rodadasmitad2 .proximasSalidas a:hover {
+.rodadasmitad2 .proximasSalidas a:hover {
   text-shadow: 0 0 10px #fff;
 }
 
@@ -601,7 +584,7 @@ footer h5 {
   margin-left: 10px;
   font-size: 30px;
   background-color: black;
-  color: white;
+  color: #ffffff;
   font-weight: bolder;
   text-shadow: 0 0 5px black;
 }
@@ -625,7 +608,7 @@ footer h5 {
   text-align: center;
   padding: 20px;
   border: 2px solid black;
-  color: #D6D6D6;
+  color: #ffffff;
   letter-spacing: 2px;
   word-spacing: 1px;
 }
@@ -641,52 +624,5 @@ footer h5 {
 .nosotros .nosotrostercio3 video {
   height: 400px;
 }
-
-/*.nosotros div h1 {
-    margin-top: 15px;
-    margin-left: 10px;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    font-weight: bolder;
-    text-shadow: 0 0 5px black;
-}*/
-/*#carouselExampleIndicators {
-    height: 300px;
-    border: 5px solid black;
-    background-position: center;
-    background-size: contain;
-}*/
-/*.carousel-inner {
-    height: 300px;
-}*/
-/*.carousel-item {
-    background-size: cover;
-    background-position: center;
-}*/
-/*.nosotrostercio2 {
-    text-align: center;
-}*/
-/*.nosotrostercio2 p {
-    text-align: center;
-    padding: 20px;
-    border: 2px solid black;
-    color: #D6D6D6;
-    letter-spacing: 2px;
-    word-spacing: 1px;
-}*/
-/*.nosotrostercio3 {
-
-    text-align: center;
-    padding: 10px;
-}*/
-/*.nosotrosrwecio3 p {
-    padding: 10px;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-}*/
-/*video {
-    height: 400px;
-}*/
 
 /*# sourceMappingURL=styleOk.css.map */
