--- a/sass/_indexMain.scss
+++ b/sass/_indexMain.scss
@@ -5,11 +5,13 @@
     div {
         height: 150px;
         border: 10px solid black;
-        transition: all 0.9s;
+        transition: all 1s;
 
         &:hover {
-            transform: scale(1.01);
-
+            transform: scale(1);
+        }
+        &:active{
+            transform: scale(1.1);
         }
 
         a {
