--- a/styleOk.css
+++ b/styleOk.css
@@ -71,10 +71,13 @@ nav div.container-fluid a.navbar-brand img {
 .index div {
   height: 150px;
   border: 10px solid black;
-  transition: all 0.9s;
+  transition: all 1s;
 }
 .index div:hover {
-  transform: scale(1.01);
+  transform: scale(1);
+}
+.index div:active {
+  transform: scale(1.1);
 }
 .index div a {
   text-decoration: none;
