--- a/sass/_rodadas.scss
+++ b/sass/_rodadas.scss
@@ -5,7 +5,8 @@
     .rodadasGasparini {
         height: auto;
         border: 2px solid black;
-        background-color: rgba(255, 255, 255, 0.5);
+        background-image: linear-gradient(to bottom, black, grey);
+        //background-color: rgba(255, 255, 255, 0.5);
         text-align: center;
         padding: 10px 20px 20px 20px;
 
@@ -13,6 +14,7 @@
             font-size: 45px;
             padding: 10px;
             font-weight: bolder;
+            color: $color;
         }
 
         img {
