--- a/sass/_indexMain.scss
+++ b/sass/_indexMain.scss
@@ -53,6 +53,9 @@
 
         div {
             width: 45%;
+            &:hover {
+                transform: scale(1.01);
+            }
         }
     }
 }
