modifico color botonMasInfo p strong

--- a/styleOk.css
+++ b/styleOk.css
@@ -588,7 +588,7 @@ footer h5 {
 .sectionrodadas .botonMasInfo a {
   margin: 0px;
 }
-.sectionrodadas .botonMasInfo p {
+.sectionrodadas .botonMasInfo p strong {
   color: #ffffff;
 }
 
