--- a/styleOk.css
+++ b/styleOk.css
@@ -199,7 +199,7 @@ nav div.container-fluid a.navbar-brand img {
   }
 }
 footer {
-  height: 70px;
+  height: 100%;
   width: 100%;
   background-color: black;
   display: flex;
